--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "scripts": {
-    "demo": "rm -rf ./dist && rollup -c && node bundle.js"
-  },
-  "dependencies": {
-    "@types/lodash": "4.14.138",
-    "lodash": "4.17.15",
-    "rollup-plugin-typescript2": "0.24.0",
-    "typescript": "3.6.2"
+    "demo": "rm -rf ./dist && rollup -c && node ./dist/bundle.js"
   },
   "devDependencies": {
-    "rollup": "1.20.3"
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-typescript": "8.3.0",
+    "rollup": "2.60.0",
+    "tslib": "2.3.1",
+    "typescript": "4.4.4"
   }
 }
