--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
     "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@@@/*": [
+        "src/*"
+      ]
+    }
   }
 }
