--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "scripts": {
-    "demo": "rm -rf ./dist && rollup -c && node ./dist/bundle.js"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.6",
-    "@rollup/plugin-typescript": "8.3.0",
-    "rollup": "2.60.0",
-    "tslib": "2.3.1",
-    "typescript": "4.4.4"
-  }
+    "scripts": {
+        "start": "rm -rf ./dist && rollup -c && node ./dist/bundle.js"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "21.0.1",
+        "@rollup/plugin-json": "4.1.0",
+        "@rollup/plugin-node-resolve": "13.0.6",
+        "@rollup/plugin-typescript": "8.3.0",
+        "rollup": "2.60.0",
+        "tslib": "2.3.1",
+        "typescript": "4.4.4"
+    }
 }
